--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
 <ul>
   {{#each burgers}}
     {{#unless devoured}}
-      {{> burger_name/burger_name-block devoured=true}}
+      {{> burger/burger-block devoured=true}}
     {{/unless}}
   {{/each}}
 </ul>
@@ -19,7 +19,7 @@
 <ul>
   {{#each burgers}}
     {{#if devoured}}
-      {{> burger_name/burger_name-block devoured=false}}
+      {{> burger/burger-block devoured=false}}
     {{/if}}
   {{/each}}
 </ul>
